syntax = "proto3";

package ctxmate_schema;

message BackendInput {
    bytes system_prompt = 1;
    bytes context = 2;
}

message BackendOutput {
    bytes output = 1;
}